# labelme-to-maskimg

./: README.md  convert.py  pyproject.toml  requirements-dev.txt  requirements.txt
utils/: image_tool.py  json_util.py  text_tool.py
