[tool.poetry]
name = "labelimg2mask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.3"
matplotlib = "^3.7.1"
yapf = "^0.33.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
